--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["examples", "vulkano", "vulkano-macros", "vulkano-shaders", "vulkano-util", "vulkano-win"]
+members = ["vulkano", "vulkano-macros", "vulkano-shaders", "vulkano-util", "vulkano-win"]
 resolver = "2"
